--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile
@@ -1,7 +1,6 @@
 # You can change this base image to anything else
 # But make sure to use the correct version of Java
-# Use Java 17 base image
-FROM eclipse-temurin:17-jre-alpine
+FROM adoptopenjdk/openjdk11:alpine-jre
 
 # Simply the artifact path
 ARG artifact=target/spring-boot-web.jar
