--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile
@@ -1,26 +1,15 @@
-# You can change this base image to anything else
+
 # But make sure to use the correct version of Java
-# Use an official Maven image with JDK 17
-FROM maven:3.9.6-eclipse-temurin-17
+FROM adoptopenjdk/openjdk11:alpine-jre
 
-# Set working directory
-WORKDIR /app
-
-# Copy source code
-COPY . .
-
-# Package the app using Maven
-RUN mvn clean package -DskipTests
-
-# Use a lightweight JDK 17 base image to run the app
-FROM eclipse-temurin:17-jdk-alpine
+# Simply the artifact path
+ARG artifact=target/spring-boot-web.jar
 
 WORKDIR /opt/app
 
-# Copy the jar from the previous build stage
-COPY --from=0 /app/target/spring-boot-web.jar app.jar
+COPY ${artifact} app.jar
 
-# Run the app
-ENTRYPOINT ["java", "-jar", "app.jar"]
+# This should not be changed
+ENTRYPOINT ["java","-jar","app.jar"]
 
 
