--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app: spring-boot-app
 spec:
+  revisionHistoryLimit: 1
   replicas: 2
   selector:
     matchLabels:
@@ -16,6 +17,7 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: mkanisetty/ultimate-cicd:18
+        image: mkanisetty/ultimate-cicd:replaceImageTag
         ports:
         - containerPort: 8080
+
