--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: mkanisetty/ultimate-cicd:replaceImageTag
+        image: mkanisetty/ultimate-cicd:19
         ports:
         - containerPort: 8080
 
